CHANGELOG

+ new
- fixed
* changed
? info

x/10/2004 - 1.3

* Updates changed to server side

5/10/2004 - 1.2.1

+ Added new version notification
+ Added icon to the window
* Changed taborder in wizard
+ Wrote first test case for AtomBlog (see blog for link)
+ Added export feature for posts
- Cleaned up the BG module. Less code now, no notify() method.
- Minor bugs fixed
* Changed the settings format. Its incompatible with previous version. Sorry, but it was needed, since previous
  format did not allow the user to store list of posts for multiple blogs.
* Changed the UI to represent the ability to control multiple blogs

? The 1.3 version will be next major update, with toolbar plugins



04/10/2004 - 1.2 - fixup

- Post editing is fixed
* Post publishing made async aswell
Not mentioned in previous entry: 
* The 'delete' button was removed from the form. Now deleteing a post is done thru popup menu on items.
* The 'new' button was moved to main toolbar instead of some unknown blank one :)
+ License notice added to the modules
* XmlTramp was removed and now only FeedParser is used

01/10/2004 - 1.1 - beautify

Second try on the fist version.
* Modules moved to separated dir
+ Added a script to correctly execute the app
- Fixed and improved the packaging
+ Included the GPL license
+ Added WhatsThis to most of GUI items
+ Added accelerators to most items
- Fixed some major fuckups in the code
+ Prepared translation file. (though it's not used yet)

30/9/2004 - 1.0 - screwy

+ First version. Nothing works. Packaging is absent.